--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-  We are using Node.js <span id="node-version"></span>,
-  Chromium <span id="chrome-version"></span>,
-  and Electron <span id="electron-version"></span>.
+  <nav>
+    <div id="titleshown"></div>
+    <div id="buttons">
+        <div id="minimize"><span>&dash;</span></div>
+        <div id="quit"><span>&times;</span></div>
+    </div>
+  </nav>
+  <div id="content">
+    <div id="title">
+      <h1>Hello World!</h1>
+    </div>
+    <div id="body">
+      <button id="vpn-connect">Click Me!</button>
+    </div>
+  </div>
+
+  <script src="./renderer.js"></script>
 
 </html>
