--- a/download.html
+++ b/download.html
@@ -22,7 +22,7 @@
     </div>
     <div id="title">
       <h1>Downloading binaries...</h1>
-      <h2>v0.0.1 - nebula v<span id="version">1.5.0</span></h2>
+      <h2>v<span id="app-version"></span> - nebula v<span id="nebula-version"></span></h2>
     </div>
   </div>
 
