--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="content">
     <div id="title">
       <h1>Nebula VPN</h1>
-      <h2>v0.0.1 - nebula v1.5.0</h2>
+      <h2>v<span id="app-version"></span> - nebula v<span id="nebula-version"></span></h2>
     </div>
     <div id="world">
       <img id="world-disconnected" src="./media/world-disconnected.svg">
