Add tooltip on hover

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
   </nav>
   <div id="content">
-    <div id="title">
+    <div id="title" title="Designed by XDGFX">
       <h1>Nebula VPN</h1>
       <h2>v<span id="app-version"></span> - nebula v<span id="nebula-version"></span></h2>
     </div>
