Added config setup page

--- a/download.html
+++ b/download.html
@@ -12,8 +12,9 @@
 <body>
   <nav>
     <div id="buttons">
-        <div id="minimize"><span>&dash;</span></div>
-        <div id="quit"><span>&times;</span></div>
+      <div id="pad"></div>
+      <div id="minimize"><span>&dash;</span></div>
+      <div id="quit"><span>&times;</span></div>
     </div>
   </nav>
   <div id="content">
