--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
   <nav>
     <div id="buttons">
-        <div id="minimize"><span>&dash;</span></div>
-        <div id="quit"><span>&times;</span></div>
+      <div id="settings"><span>&#9881;</span></div>
+      <div id="minimize"><span>&dash;</span></div>
+      <div id="quit"><span>&times;</span></div>
     </div>
   </nav>
   <div id="content">
@@ -72,5 +73,6 @@
   </div>
 
   <script src="./renderer.js"></script>
+  <script src="./index.js"></script>
 
 </html>
